feat: added in pages with bootstrap

--- a/index.html
+++ b/index.html
@@ -1,16 +1,151 @@
 <head>
   <title>Ben Slee</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-<div class="head"></div>
+
+<div class="header p-3">
+  <div class="row">
+    <div class="col-4">
+      <h2><i class="fa-solid fa-code"></i>&nbsp;Bubbleshum.github.io</h2>
+    </div>
+    <div class="col" style="align-self: center;">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="pill" href="#about">About Me</a>
+        </li> |
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="#menu1">Experience</a>
+        </li> |
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="#menu2">Scripts</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col">
+
+    </div>
+  </div>
+</div>
+<div class="content">
+  <div class="tab-content">
+    <div class="tab-pane container active" id="about">
+      <div class="p-3">
+        <div class="row">
+          <div class="col">
+            <h3>About Me</h3>
+            <hr style="color: #EEEEEE">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <span>Hi, my name is Ben Slee, and I am a full-stack developer. I work in C#, Java, PHP, Javascript,
+              HTML, CSS and have worked with several frameworks to build interactive frontends, sophisticated backends and
+              everything in between. <br><br>
+              During my professional career, I have worked with many technologies and integrated systems to enhance existing
+              systems and build entirely new projects. Working for an automotive security company, I have integrated
+              full systems for decoding, analysing and processing GPS technologies, I have worked with encryption
+              and ensured services are fully scalable. On top of working with current products on the market, I have also
+              optimised production output by automating operations through development of Windows applications to assist
+              with the reduction of human error and reduce the steps required for said operations. <br><br>
+              Outside of my career, I have an interest in smart home automations, dashboards and small projects.
+              I have recently been working on building a maintenance management system using MYSQL for the database,
+              Laravel for the API and VueJs for the frontend. The entire project is ran in docker containers and
+              hosted locally from my workshop.
+            </span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h3>Skills</h3>
+            <hr style="color: #EEEEEE">
+          </div>
+          <div class="col">
+            <h3>Interests</h3>
+            <hr style="color: #EEEEEE">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab-pane container fade" id="menu1">
+      <div class="p-3">
+        <div class="row">
+          <div class="col">
+            <h3>Experience</h3>
+            <hr style="color: #EEEEEE">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab-pane container fade" id="menu2">
+      <div class="p-3">
+        <div class="row">
+          <div class="col">
+            <h3>Scripts</h3>
+            <hr style="color: #EEEEEE">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <span>A small script that creates different types of toast notifications.</span>
+            <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="bGQjaMM" data-user="Bubbleshum" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/Bubbleshum/pen/bGQjaMM">
+              Toasts</a> by Bubbleshum (<a href="https://codepen.io/Bubbleshum">@Bubbleshum</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          </div>
+          <div class="col"></div>
+          <div class="col"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
-<h1>hi</h1>
 
-
-<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="bGQjaMM" data-user="Bubbleshum" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/Bubbleshum/pen/bGQjaMM">
-  Toasts</a> by Bubbleshum (<a href="https://codepen.io/Bubbleshum">@Bubbleshum</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+<style>
+  body {
+    margin: 0;
+  }
+  a.nav-link {
+    color: white;
+    display: inline !important;
+  }
+  a.nav-link:hover {
+    color: lightgray;
+  }
+  a.nav-link.active {
+    font-weight: bold;
+  }
+  .header {
+    width: 100%;
+    background-color: #222831;
+    color: #EEEEEE;
+    border-bottom: #FFD369 solid 3px;
+  }
+  span {
+    color: #EEEEEE;
+  }
+  .content {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #393E46;
+  }
+  h3 {
+    position: relative;
+    font-size: 54px;
+    top: 22px;
+    color: #FFD369;
+    -webkit-text-stroke-width: thick;
+  }
+  hr {
+    border-color: #FFD369;
+  }
+</style>
