--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <li class="nav-item">
           <a class="nav-link active" data-toggle="pill" href="#about">About Me</a>
         </li> |
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="#menu1">Experience</a>
-        </li> |
+<!--         <li class="nav-item"> -->
+<!--           <a class="nav-link" data-toggle="pill" href="#menu1">Experience</a> -->
+<!--         </li> | -->
         <li class="nav-item">
           <a class="nav-link" data-toggle="pill" href="#menu2">Scripts</a>
         </li>
